--- a/.github/workflows/check.yaml
+++ b/.github/workflows/check.yaml
@@ -2,6 +2,7 @@ name: check
 
 on:
   workflow_dispatch:
+  workflow_dispatch:
   push:
     branches:
       - master
@@ -24,16 +25,17 @@ jobs:
           # bleeding check 
           # 1. install latest toolchain 
           # 2. install latest core library from github.com
-          - name: ubuntu-latest
-            version: bleeding
-          - name: macos-latest
-            version: bleeding
-          - name: macos-13
-            version: bleeding
-          - name: windows-latest
-            version: bleeding
+          # - name: ubuntu-latest
+          #   version: bleeding
+          # - name: macos-latest
+          #   version: bleeding
+          # - name: macos-13
+          #   version: bleeding
+          # - name: windows-latest
+          #   version: bleeding
 
       fail-fast: false
+    runs-on: ${{ matrix.os.name }}
     runs-on: ${{ matrix.os.name }}
     continue-on-error: false
     steps:
@@ -41,8 +43,27 @@ jobs:
 
       - name: install stable version on unix
         if: ${{ matrix.os.name != 'windows-latest' && matrix.os.version == 'stable' }}
+      - name: install stable version on unix
+        if: ${{ matrix.os.name != 'windows-latest' && matrix.os.version == 'stable' }}
         run: |
           curl -fsSL https://cli.moonbitlang.com/install/unix.sh | bash
+
+      - name: install stable version on windows
+        if: ${{ matrix.os.name == 'windows-latest' && matrix.os.version == 'stable' }}
+        run: |
+          Set-ExecutionPolicy RemoteSigned -Scope CurrentUser; irm https://cli.moonbitlang.com/install/powershell.ps1 | iex
+          
+      - name: install bleeding version on unix
+        if: ${{ matrix.os.name != 'windows-latest' && matrix.os.version == 'bleeding' }}
+        run: |
+          curl -fsSL https://cli.moonbitlang.com/install/unix.sh | bash -s bleeding
+        # passing bleeding as argument to unix.sh
+
+      - name: install bleeding version on windows
+        env:
+          MOONBIT_INSTALL_VERSION: bleeding
+        # set global env variable for powershell.ps1
+        if: ${{ matrix.os.name == 'windows-latest' && matrix.os.version == 'bleeding' }}
 
       - name: install stable version on windows
         if: ${{ matrix.os.name == 'windows-latest' && matrix.os.version == 'stable' }}
@@ -71,12 +92,27 @@ jobs:
       - name: add env path on windows
         if: ${{ matrix.os.name == 'windows-latest' }}
         run: |
+
+      - name: add env path on unix
+        if: ${{ matrix.os.name != 'windows-latest' }}
+        run: |
+          echo "$HOME/.moon/bin" >> $GITHUB_PATH
+
+      - name: add env path on windows
+        if: ${{ matrix.os.name == 'windows-latest' }}
+        run: |
           "C:\Users\runneradmin\.moon\bin" | Out-File -FilePath $env:GITHUB_PATH -Append
+      
       
       - name: moon version
         run: |
           moon version --all
           moonrun --version
+      
+      - name: install module dependencies
+        run: |
+          moon update
+          moon install
       
       - name: install module dependencies
         run: |
@@ -92,10 +128,20 @@ jobs:
           git diff --exit-code
 
       - name: format diff
+
+      - name: format diff
         run: |
           moon fmt --block-style
           git diff --exit-code
+          moon fmt --block-style
+          git diff --exit-code
 
+      - name: Setup MSVC
+        if: ${{ matrix.os.name == 'windows-latest' }}
+        uses: ilammy/msvc-dev-cmd@v1
+
+      - name: Set ulimit on unix
+        if: ${{ matrix.os.name != 'windows-latest' }}
       - name: Setup MSVC
         if: ${{ matrix.os.name == 'windows-latest' }}
         uses: ilammy/msvc-dev-cmd@v1
@@ -110,14 +156,23 @@ jobs:
           moon test --target all,native
           moon test --target all,native --release
 
+      - name: moon test
+        run: |
+          moon test --target all,native
+          moon test --target all,native --release
+
       - name: moon test with dedup_wasm
+        if: ${{ matrix.os.name != 'windows-latest' }}
         if: ${{ matrix.os.name != 'windows-latest' }}
         env: 
           MOONC_INTERNAL_PARAMS: dedup_wasm = 1 |
 
         run: |
           moon clean
+          moon clean
           ulimit -s 8176
+          moon test --target wasm,wasm-gc
+          moon test --target wasm,wasm-gc --release 
           moon test --target wasm,wasm-gc
           moon test --target wasm,wasm-gc --release 
 
@@ -142,6 +197,23 @@ jobs:
           done
           (exit $_passed)
 
+  typo-check:
+    runs-on: ubuntu-latest
+    timeout-minutes: 10
+    env:
+      FORCE_COLOR: 1
+      TYPOS_VERSION: v1.19.0
+    steps:
+      - name: download typos
+        run: curl -LsSf https://github.com/crate-ci/typos/releases/download/$TYPOS_VERSION/typos-$TYPOS_VERSION-x86_64-unknown-linux-musl.tar.gz | tar zxf - -C ${CARGO_HOME:-~/.cargo}/bin
+
+      - name: Checkout repository
+        uses: actions/checkout@v4
+        with:
+          ref: ${{ github.event.pull_request.head.sha }}
+
+      - name: check typos
+        run: typos
   typo-check:
     runs-on: ubuntu-latest
     timeout-minutes: 10
